# ConstructDrawingAI

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ConstructDrawingAI_Colab.ipynb  LICENSE  Makefile  README.md  fetch_datasets.py  pyproject.toml
.dvc/: config
agent/: __init__.py  qa.py  rfi.py
backend/: __init__.py  app.py  detect.py
cir/: __init__.py  enums.py  examples.py  exceptions.py  geometry.py  schema.py  serialization.py  version.py
datasets/: __init__.py  __main__.py  audit.py  prepare.py  realsets.py  registry.py  registry.yaml
datasets/preparers/: __init__.py  base.py  delp.py  graphml_cir.py  pidqa.py  resplan_cir.py  yolo_generic.py
docs/: ANNOTATION_GUIDE.md  ARCHITECTURE.md  BENCHMARKS.md  CIR.md  GRAPH_MAPPING.md  HANDOFF.md  PERCEPTION.md
engines/: __init__.py  takeoff.py
eval/: __init__.py  __main__.py  adapters.py  aggregate.py  fixtures.py  frontier.py  harness.py  leaderboard.py  metrics.py  tasks.py  tiling.py  tracking.py  validate.py
grounding/: __init__.py  ontology.py
infra/: Dockerfile  README.md  docker-compose.yml
infra/arc/: delp_yolo.data.yaml  train_delp.slurm  train_synbet.slurm
infra/arc/study/: delp10.yaml  mix.yaml  synth10.yaml
infra/slurm/: train.slurm
ingest/: __init__.py  base.py  dxf.py  handoff.py  ifc.py  image.py  normalize.py  pdf.py  raster.py  scale.py  sheets.py  tiling.py
perception/: __init__.py  __main__.py  adapter.py  annotation.py  base.py  config.py  connectivity.py  crosswalk.py  dataset.py  detector.py  fewshot.py  labels.py  scoreboard.py
perception/conf/connectivity/: h200_full.yaml  local_debug.yaml
perception/conf/detector/: h200_full.yaml  local_debug.yaml
synthetic/: __init__.py  canvas.py  curated.py  degrade.py  expect.py  generate.py  ifc_source.py  layout.py  model.py  provenance.py  qa.py  render.py  scene.py  style.py  symbols.py  validate.py
tests/: __init__.py  conftest.py  test_agent.py  test_annotation.py  test_backend.py  test_cir_geometry.py  test_cir_invariants.py  test_cir_roundtrip.py  test_crosswalk.py  test_datasets_preparers.py  test_datasets_registry.py  test_eval_harness.py  test_eval_metrics.py  test_eval_validate.py  test_graph_schema.py  test_graphml_cir.py  test_grounding.py  test_ingest_formats.py  test_ingest_handoff.py  test_ingest_helpers.py  test_perception_adapter.py  test_perception_connectivity.py  test_perception_dataset.py  test_perception_fewshot.py  test_perception_labels.py  test_perception_scoreboard.py  test_realsets.py  test_resplan.py  test_synthetic_engine.py  test_takeoff.py  test_yolo_generic.py
webapp/: README.md
