[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "constructdrawing-ai"
version = "0.1.0"
description = "A construction-drawing-understanding AI platform: perception-first, structured/ontology-grounded output, built on public + synthetic data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Alireza Shojaei", email = "shojaei@vt.edu" }]
keywords = [
    "construction",
    "AEC",
    "drawing-understanding",
    "computer-vision",
    "document-ai",
    "IFC",
    "BIM",
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies. Deliberately tiny: the CIR + serialization is the
# only thing every layer must always be able to import. Heavy, phase-specific
# dependencies (torch, transformers, ultralytics, ifcopenshell, ...) live in the
# optional-dependency groups below and are installed per-phase, per-machine.
dependencies = [
    "pydantic>=2.6,<3",
    "msgpack>=1.0",   # compact binary serialization of the CIR
    "pyyaml>=6.0",    # dataset registry + config files
]

[project.optional-dependencies]
# Local developer toolchain (lint, format, type-check, test, hooks).
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "httpx>=0.27",    # FastAPI TestClient transport (used in backend tests)
]
# FastAPI service (L-side: /backend). Installed where the API is served.
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",  # file uploads (ingest endpoint, later)
]
# Experiment tracking + data/artifact versioning (W&B + DVC w/ S3 remote).
tracking = [
    "wandb>=0.17",
    "dvc[s3]>=3.50",
]
# Evaluation harness: numeric metrics + image tiling for large drawings.
eval = [
    "numpy>=1.26",
    "pillow>=10.0",
]
# Frontier-API baseline adapters (vision). Installed where baselines are run.
frontier = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
]
# L0 ingestion: CAD/PDF/IFC parsing, geometry, raster handling.
ingest = [
    "ezdxf>=1.1",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "shapely>=2.0",
    "opencv-python>=4.9",
    "ifcopenshell>=0.8",
]
# L1 perception training (Build Playbook 2.1 — the wedge detectors). The detector/
# connectivity models train on the 4090 (local-debug) then the H200 (full SFT). Install
# the CUDA torch build for the target GPU per https://pytorch.org. The synthetic engine
# itself needs none of this — it runs on the core deps + eval (numpy/pillow).
perception = [
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.2",     # YOLOv11 / RT-DETR symbol detector
    "timm>=1.0",            # backbones
    "albumentations>=1.4",  # augmentation (composes with our degradation slices)
    "omegaconf>=2.3",       # config backend (Hydra is built on it)
    "hydra-core>=1.3",      # local-debug / h200-full config profiles
    "transformers>=4.44",   # RT-DETR + connectivity backbones (Hugging Face)
    "accelerate>=0.33",     # multi-GPU / FSDP launch for the H200 full run
]

[project.urls]
Documentation = "https://example.invalid/docs"  # TODO: replace with real docs URL

# ---------------------------------------------------------------------------
# Build: this is a monorepo. One distribution, many top-level packages, each a
# layer of the architecture. webapp/ is a (future) JS app, not a Python package;
# docs/, infra/, tests/ are not shipped.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = [
    "cir",
    "ingest",
    "perception",
    "grounding",
    "engines",
    "agent",
    "synthetic",
    "eval",
    "backend",
    "datasets",
]

# ---------------------------------------------------------------------------
# Ruff: linter + import sorter. Formatting is delegated to Black (see below);
# we do NOT enable the Ruff formatter to avoid two formatters fighting.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
]
ignore = [
    "E501",                          # line length is governed by Black
    "B008",                          # FastAPI/typer rely on calls in argument defaults
    "RUF001", "RUF002", "RUF003",    # ambiguous Unicode is intentional in docstrings/diagrams
    "RUF022",                        # __all__ is grouped by category on purpose, not sorted
    "UP042",                         # explicit (str, Enum) mixin is intentional + pydantic-friendly
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports for the public API surface
"tests/**" = ["E402"]     # tests may import after a pytest.importorskip guard

[tool.ruff.lint.isort]
known-first-party = [
    "cir", "ingest", "perception", "grounding", "engines",
    "agent", "synthetic", "eval", "backend", "datasets",
]

# ---------------------------------------------------------------------------
# Black: the single source of truth for formatting.
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

# ---------------------------------------------------------------------------
# Mypy: static type checking. The Pydantic plugin teaches mypy about models.
# Optional/heavy third-party deps are not always installed locally, so missing
# imports are ignored rather than failing the check.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
# Never type-check downloaded third-party data/code or generated CIR outputs.
exclude = [
    "datasets/raw/",
    "datasets/processed/",
]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
# Surface DeprecationWarnings raised by *our own* code as errors, while staying
# tolerant of third-party warnings (which we cannot fix from here).
filterwarnings = [
    "default",
    "error::DeprecationWarning:cir",
]

# ---------------------------------------------------------------------------
# Coverage (used by `pytest --cov`).
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["cir"]

[tool.coverage.report]
show_missing = true
skip_covered = true
